refactor: simplify Spider (#25)